recursion.cons.remove.Remove.scala.error
Erreur de compilation :
Remove:10: error: not found: value reomve
      return reomve(l.tail,v)
             ^